--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2021-07-07 Wed 16:08 -->
+<!-- 2021-07-07 Wed 16:18 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>LS4GAN's Toy Zero</title>
@@ -221,6 +221,35 @@
 <body>
 <div id="content">
 <h1 class="title">LS4GAN's Toy Zero</h1>
+<div id="table-of-contents">
+<h2>Table of Contents</h2>
+<div id="text-table-of-contents">
+<ul>
+<li><a href="#goals">1. Goals</a></li>
+<li><a href="#prepare">2. Prepare</a>
+<ul>
+<li><a href="#env">2.1. Environment</a></li>
+<li><a href="#checks">2.2. Check Wire-Cell Toolkit</a></li>
+<li><a href="#python">2.3. Python</a>
+<ul>
+<li><a href="#hack">2.3.1. Hacking</a></li>
+</ul>
+</li>
+</ul>
+</li>
+<li><a href="#usage">3. Usage</a></li>
+<li><a href="#details">4. Details</a>
+<ul>
+<li><a href="#resp">4.1. resp</a></li>
+<li><a href="#wires">4.2. wires</a></li>
+<li><a href="#depos">4.3. depos</a></li>
+<li><a href="#frames">4.4. frames</a></li>
+<li><a href="#images">4.5. images</a></li>
+</ul>
+</li>
+</ul>
+</div>
+</div>
 <p>
 Bare first steps toward LS4GAN.  <b>still work in progress</b>
 </p>
@@ -288,14 +317,14 @@ management system</b>, translate the contents of the example <a href="dot.envrc"
 </p>
 </div>
 
-<div id="outline-container-org747f39b" class="outline-3">
-<h3 id="org747f39b"><span class="section-number-3">2.1</span> Environment</h3>
-<div class="outline-text-3" id="text-2-1">
+<div id="outline-container-env" class="outline-3">
+<h3 id="env"><span class="section-number-3">2.1</span> Environment</h3>
+<div class="outline-text-3" id="text-env">
 <p>
 A one time setup of direnv:
 </p>
 
-<pre class="example" id="org3e3d480">
+<pre class="example" id="org4a8de1d">
 $ cd toyzero
 $ cp dot.envrc .envrc
 $ emacs .envrc  # edit to taste
@@ -304,16 +333,16 @@ $ direnv allow
 </div>
 </div>
 
-<div id="outline-container-orga29c6db" class="outline-3">
-<h3 id="orga29c6db"><span class="section-number-3">2.2</span> Check Wire-Cell Toolkit</h3>
-<div class="outline-text-3" id="text-2-2">
+<div id="outline-container-checks" class="outline-3">
+<h3 id="checks"><span class="section-number-3">2.2</span> Check Wire-Cell Toolkit</h3>
+<div class="outline-text-3" id="text-checks">
 <p>
 The Wire-Cell Toolkit program <code>wire-cell</code> and its libraries are
 required.  See <a href="https://wirecell.bnl.gov/">https://wirecell.bnl.gov/</a> for installation information.
 Check if WCT is available with these commands:
 </p>
 
-<pre class="example" id="org6aa0b6b">
+<pre class="example" id="org77b0c72">
 $ wire-cell --help
 $ wcsonnet wirecell.jsonnet
 $ echo $WIRECELL_PATH
@@ -327,15 +356,15 @@ by WCT.  This <code>toyzero</code> package provides additional configuration in
 </div>
 </div>
 
-<div id="outline-container-org340fa1c" class="outline-3">
-<h3 id="org340fa1c"><span class="section-number-3">2.3</span> Python</h3>
-<div class="outline-text-3" id="text-2-3">
+<div id="outline-container-python" class="outline-3">
+<h3 id="python"><span class="section-number-3">2.3</span> Python</h3>
+<div class="outline-text-3" id="text-python">
 <p>
 The stand-alone <code>wire-cell-python</code> package, the <code>snakemake</code> program and
 various other Python 3 packages are required.  
 </p>
 
-<pre class="example" id="orgaf67706">
+<pre class="example" id="org4d3fa27">
 $ cd toyzero
 $ pip install -r requirements.txt
 </pre>
@@ -344,23 +373,23 @@ $ pip install -r requirements.txt
 Some checks:
 </p>
 
-<pre class="example" id="orgac34b6d">
+<pre class="example" id="orgde0b0b5">
 $ wirecell-&lt;TAB&gt;
 $ wirecell-util --help
 $ snakemake --help
 </pre>
 </div>
 
-<div id="outline-container-orgc91e5e9" class="outline-4">
-<h4 id="orgc91e5e9"><span class="section-number-4">2.3.1</span> Hacking</h4>
-<div class="outline-text-4" id="text-2-3-1">
+<div id="outline-container-hack" class="outline-4">
+<h4 id="hack"><span class="section-number-4">2.3.1</span> Hacking</h4>
+<div class="outline-text-4" id="text-hack">
 <p>
 The above installs WCT python for use.  To develop that code without
 having to go through many GitHub pushes we can leverage the <code>direnv</code>
 environment for <code>toyzero</code> use:
 </p>
 
-<pre class="example" id="org1cc35c1">
+<pre class="example" id="orgb2b4cd3">
 $ git clone git@github.com:wirecell/wire-cell-python.git
 $ cd wire-cell-python/
 $ pip install -U -e .
@@ -398,9 +427,9 @@ number of <code>all_*</code> sub-targets.
 </p>
 </div>
 
-<div id="outline-container-orgbd38e4e" class="outline-3">
-<h3 id="orgbd38e4e"><span class="section-number-3">4.1</span> resp</h3>
-<div class="outline-text-3" id="text-4-1">
+<div id="outline-container-resp" class="outline-3">
+<h3 id="resp"><span class="section-number-3">4.1</span> resp</h3>
+<div class="outline-text-3" id="text-resp">
 <p>
 The <code>all_resp</code> target gets 2D WCT "response file" and derive from it
 quasi-1D response file and make some diagnostic plots for each.
@@ -415,22 +444,22 @@ transverse pitch direction (Y-axis) when it is at the moment of time
 </p>
 
 
-<div id="org9912ce8" class="figure">
+<div id="org3760c6d" class="figure">
 <p><img src="plots/fake-resps-diagnostic.png" alt="fake-resps-diagnostic.png" width="90%" />
 </p>
 </div>
 
 
-<div id="orgd48ed7a" class="figure">
+<div id="orgdf515d1" class="figure">
 <p><img src="plots/real-resps-diagnostic.png" alt="real-resps-diagnostic.png" width="90%" />
 </p>
 </div>
 </div>
 </div>
 
-<div id="outline-container-orgb5b32ae" class="outline-3">
-<h3 id="orgb5b32ae"><span class="section-number-3">4.2</span> wires</h3>
-<div class="outline-text-3" id="text-4-2">
+<div id="outline-container-wires" class="outline-3">
+<h3 id="wires"><span class="section-number-3">4.2</span> wires</h3>
+<div class="outline-text-3" id="text-wires">
 <p>
 The <code>all_wires</code> target gets WCT "wires file" and makes a multipage PDF
 file with diagnostic plots at <a href="plots/wires-diagnostic.pdf">plots/wires-diagnostic.pdf</a>.  Most
@@ -441,15 +470,15 @@ wire segments may be instructive.
 </div>
 </div>
 
-<div id="outline-container-org05e347e" class="outline-3">
-<h3 id="org05e347e"><span class="section-number-3">4.3</span> depos</h3>
-<div class="outline-text-3" id="text-4-3">
+<div id="outline-container-depos" class="outline-3">
+<h3 id="depos"><span class="section-number-3">4.3</span> depos</h3>
+<div class="outline-text-3" id="text-depos">
 <p>
 The <code>all_depos</code> target generates sets of ionization point depositions
 for input to the WCT simulation.  It produces a file:
 </p>
 
-<pre class="example" id="orgc7f3c71">
+<pre class="example" id="orgd754649">
 data/{wire}-depos.npz
 </pre>
 
@@ -458,7 +487,7 @@ Where <code>{wire}</code> names the wires file.  The file is in Numpy format wit
 arrays named like:
 </p>
 
-<pre class="example" id="org0816040">
+<pre class="example" id="org53d7195">
 depo_data_&lt;N&gt;
 depo_info_&lt;N&gt;
 </pre>
@@ -490,16 +519,16 @@ showing distribution of depo times and the depo locations.
 </p>
 
 
-<div id="org48ac963" class="figure">
+<div id="org98abae5" class="figure">
 <p><img src="plots/depos-diagnostic.png" alt="depos-diagnostic.png" width="90%" />
 </p>
 </div>
 </div>
 </div>
 
-<div id="outline-container-org475a0c5" class="outline-3">
-<h3 id="org475a0c5"><span class="section-number-3">4.4</span> frames</h3>
-<div class="outline-text-3" id="text-4-4">
+<div id="outline-container-frames" class="outline-3">
+<h3 id="frames"><span class="section-number-3">4.4</span> frames</h3>
+<div class="outline-text-3" id="text-frames">
 <p>
 The <code>all_frames</code> target generates "frame" data from depos by running the
 Wire-Cell simulation.  The "frame" file format is described elsewhere.
@@ -531,7 +560,7 @@ the second is a PNG directly from <code>matplotlib</code> at its default DPI.
 </p>
 
 
-<div id="org1755859" class="figure">
+<div id="org57b1894" class="figure">
 <p><img src="plots/hidpi/frames-fake-apa0.png" alt="frames-fake-apa0.png" width="90%" />
 </p>
 </div>
@@ -541,7 +570,7 @@ to the same data as PNG at default DPI from matplotlib:
 </p>
 
 
-<div id="org0320d13" class="figure">
+<div id="org17cff29" class="figure">
 <p><img src="plots/frames-fake-apa0.png" alt="frames-fake-apa0.png" width="90%" />
 </p>
 </div>
@@ -554,7 +583,7 @@ Some tips to deal with resolution issues
 <ul class="org-ul">
 <li>A PDF hint, if you want more zoom from your <code>evince</code>:</li>
 </ul>
-<pre class="example" id="org8d61446">
+<pre class="example" id="orgfc604b1">
 ❯ gsettings set org.gnome.Evince page-cache-size 2014
 </pre>
 
@@ -571,9 +600,9 @@ green swath in the center and any ending in white such as "terrain".</li>
 </div>
 </div>
 
-<div id="outline-container-org3044977" class="outline-3">
-<h3 id="org3044977"><span class="section-number-3">4.5</span> images</h3>
-<div class="outline-text-3" id="text-4-5">
+<div id="outline-container-images" class="outline-3">
+<h3 id="images"><span class="section-number-3">4.5</span> images</h3>
+<div class="outline-text-3" id="text-images">
 <p>
 The <code>all_images</code> target processes each "frame" data to produce one 2D
 image for each of three wire planes of each of six anode plane
@@ -581,7 +610,7 @@ assemblies.  The file name and name of the single array in the file
 match.  For example:
 </p>
 
-<pre class="example" id="orgb07849a">
+<pre class="example" id="org103e2da">
 ❯ wirecell-util npzls data/images/real/protodune-orig-0-1-W.npz 
 protodune-orig-0-1-W (960, 6000)
 </pre>
@@ -598,7 +627,7 @@ contemporaneous 6000 ticks.
 The array may be visualized with many options with this command:
 </p>
 
-<pre class="example" id="org5752f4f">
+<pre class="example" id="orge419303">
 ❯ wirecell-util npz-to-img --help
 Usage: wirecell-util npz-to-img [OPTIONS] NPZFILE
 
@@ -632,7 +661,7 @@ A few color map examples.
 </ul>
 
 
-<div id="orgfc39fb4" class="figure">
+<div id="orga7d7f8e" class="figure">
 <p><img src="plots/images/real/coolwarm/protodune-orig-0-5-U.png" alt="protodune-orig-0-5-U.png" width="90%" />
 </p>
 </div>
@@ -642,7 +671,7 @@ A few color map examples.
 </ul>
 
 
-<div id="org410a0f7" class="figure">
+<div id="org8a08de4" class="figure">
 <p><img src="plots/images/real/Spectral/protodune-orig-0-5-U.png" alt="protodune-orig-0-5-U.png" width="90%" />
 </p>
 </div>
@@ -653,7 +682,7 @@ A few color map examples.
 </ul>
 
 
-<div id="org239660a" class="figure">
+<div id="org4f877a6" class="figure">
 <p><object type="image/svg+xml" data="plots/images/real/Spectral/protodune-orig-0-5-U.svg" class="org-svg" width="90%">
 Sorry, your browser does not support SVG.</object>
 </p>
@@ -664,7 +693,7 @@ Sorry, your browser does not support SVG.</object>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: BV</p>
-<p class="date">Created: 2021-07-07 Wed 16:08</p>
+<p class="date">Created: 2021-07-07 Wed 16:18</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
